traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:18: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      true
      ^TraversalByLine:19: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^TraversalByLine:21: error: type mismatch;
 found   : Unit
 required: Boolean
      gauche()
            ^